--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -93,7 +93,7 @@
                 android:fontFamily="@font/gilroy_bold"
                 android:textAlignment="center"
                 android:padding="@dimen/_10sdp"
-                android:text="Category name"
+                android:text="Категория"
                 android:id="@+id/tvCategory"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_15ssp" />
@@ -201,7 +201,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/gilroy_bold"
             android:paddingStart="@dimen/_10sdp"
-            android:text="Ingredients"
+            android:text="Ингредиенты"
             android:textColor="@color/black"
             android:textSize="@dimen/_15ssp" />
 
@@ -236,7 +236,7 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/gilroy_bold"
             android:paddingStart="@dimen/_10sdp"
-            android:text="Instructions"
+            android:text="Способ приготовления"
             android:textColor="@color/black"
             android:textSize="@dimen/_15ssp" />
 
