--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,7 @@
                 android:paddingLeft="@dimen/_10sdp"
                 android:paddingTop="@dimen/_10sdp"
                 android:paddingRight="@dimen/_10sdp"
-                android:text="All Recipes"
+                android:text="Рецепты"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_20ssp" />
 
@@ -39,12 +39,12 @@
                 tools:listitem="@layout/item_rv_main_category" />
 
             <TextView
+                android:id="@+id/tvCategory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gilroy_bold"
                 android:paddingStart="@dimen/_10sdp"
-                android:text="Category name"
-                android:id="@+id/tvCategory"
+                android:text="Категория"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_15ssp" />
 
