--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="@dimen/_100sdp"
+        android:layout_marginStart="@dimen/_113sdp"
         android:layout_marginRight="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_20sdp"
         android:gravity="center"
@@ -32,7 +32,7 @@
             android:background="@drawable/btn_bg"
             android:paddingStart="@dimen/_20sdp"
             android:paddingEnd="@dimen/_20sdp"
-            android:text="Get Started"
+            android:text="Начать"
             android:textColor="@color/white"
             android:visibility="invisible" />
 
