--- a/app/src/main/res/layout/item_rv_main_category.xml
+++ b/app/src/main/res/layout/item_rv_main_category.xml
@@ -34,15 +34,15 @@
                 android:id="@+id/tv_dish_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Dish Name"
-                android:textSize="@dimen/_11ssp"
-                android:textColor="@color/white"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:fontFamily="@font/gilroy_bold"
                 android:maxEms="10"
                 android:maxLines="2"
-                android:fontFamily="@font/gilroy_bold"
-                android:padding="@dimen/_10sdp"/>
+                android:padding="@dimen/_10sdp"
+                android:text="Название блюда"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_11ssp" />
         </RelativeLayout>
 
 
